--- a/index.html
+++ b/index.html
@@ -127,6 +127,19 @@
         .hamburger.open .bar3 {
             transform: rotate(-45deg) translate(8px, -8px);
         }
+        .success-message {
+            display: none;
+            text-align: center;
+            padding: 2rem;
+            background: linear-gradient(135deg, #10b981, #059669);
+            border-radius: 1.5rem;
+            color: white;
+            animation: fadeIn 0.8s ease;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: scale(0.9); }
+            to { opacity: 1; transform: scale(1); }
+        }
     </style>
 </head>
 <body class="pt-20">
@@ -291,13 +304,28 @@
         <div class="container mx-auto px-4 sm:px-6">
             <h2 class="text-4xl sm:text-5xl font-bold text-center mb-16 sm:mb-20 fade-in text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-600">Get Started Today</h2>
             <div class="max-w-2xl mx-auto bg-gradient-to-br from-gray-800 to-gray-700 p-8 sm:p-12 rounded-3xl shadow-2xl fade-in">
-                <form id="contactForm" class="space-y-6 sm:space-y-8">
-                    <input type="text" id="name" placeholder="Your Name" required class="w-full p-4 sm:p-5 bg-gray-800/70 border border-gray-600 rounded-xl focus:outline-none focus:ring-4 focus:ring-pink-500 text-white text-base sm:text-lg">
-                    <input type="tel" id="phone" placeholder="Your Contact Number" required class="w-full p-4 sm:p-5 bg-gray-800/70 border border-gray-600 rounded-xl focus:outline-none focus:ring-4 focus:ring-pink-500 text-white text-base sm:text-lg">
-                    <input type="email" id="email" placeholder="Your Email" required class="w-full p-4 sm:p-5 bg-gray-800/70 border border-gray-600 rounded-xl focus:outline-none focus:ring-4 focus:ring-pink-500 text-white text-base sm:text-lg">
-                    <textarea id="project" placeholder="Tell us about your project" rows="6" required class="w-full p-4 sm:p-5 bg-gray-800/70 border border-gray-600 rounded-xl focus:outline-none focus:ring-4 focus:ring-pink-500 text-white text-base sm:text-lg"></textarea>
-                    <button type="submit" class="w-full cta-button text-white py-4 sm:py-5 rounded-xl font-bold text-lg sm:text-xl">Launch My AI Agent</button>
-                </form>
+                
+                <!-- Contact Form -->
+                <div id="contactFormContainer">
+                    <form id="contactForm" class="space-y-6 sm:space-y-8">
+                        <input type="text" id="name" placeholder="Your Name" required class="w-full p-4 sm:p-5 bg-gray-800/70 border border-gray-600 rounded-xl focus:outline-none focus:ring-4 focus:ring-pink-500 text-white text-base sm:text-lg">
+                        <input type="tel" id="phone" placeholder="Your Contact Number" required class="w-full p-4 sm:p-5 bg-gray-800/70 border border-gray-600 rounded-xl focus:outline-none focus:ring-4 focus:ring-pink-500 text-white text-base sm:text-lg">
+                        <input type="email" id="email" placeholder="Your Email" required class="w-full p-4 sm:p-5 bg-gray-800/70 border border-gray-600 rounded-xl focus:outline-none focus:ring-4 focus:ring-pink-500 text-white text-base sm:text-lg">
+                        <textarea id="project" placeholder="Tell us about your project" rows="6" required class="w-full p-4 sm:p-5 bg-gray-800/70 border border-gray-600 rounded-xl focus:outline-none focus:ring-4 focus:ring-pink-500 text-white text-base sm:text-lg"></textarea>
+                        <button type="submit" class="w-full cta-button text-white py-4 sm:py-5 rounded-xl font-bold text-lg sm:text-xl">Launch My AI Agent</button>
+                    </form>
+                </div>
+
+                <!-- Success Message -->
+                <div id="successMessage" class="success-message">
+                    <svg class="w-16 h-16 mx-auto mb-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
+                    </svg>
+                    <h3 class="text-3xl font-bold mb-4">Thank You!</h3>
+                    <p class="text-xl">Your message has been submitted successfully.</p>
+                    <p class="text-lg mt-2">We will contact you shortly on WhatsApp.</p>
+                </div>
+
             </div>
         </div>
     </section>
@@ -402,22 +430,23 @@
             });
         });
 
-        // WhatsApp Form Submit
+        // WhatsApp Form Submit with Success Message
         document.getElementById('contactForm').addEventListener('submit', function(e) {
             e.preventDefault();
-            const name = encodeURIComponent(document.getElementById('name').value);
-            const phone = encodeURIComponent(document.getElementById('phone').value);
-            const email = encodeURIComponent(document.getElementById('email').value);
-            const project = encodeURIComponent(document.getElementById('project').value);
 
-            const message = `Hello from AIgentix website!\nName: ${name}\nContact Number: ${phone}\nEmail: ${email}\nProject Details:\n${project}`;
+            const name = encodeURIComponent(document.getElementById('name').value.trim());
+            const phone = encodeURIComponent(document.getElementById('phone').value.trim());
+            const email = encodeURIComponent(document.getElementById('email').value.trim());
+            const project = encodeURIComponent(document.getElementById('project').value.trim());
+
+            const message = `Hello from AIgentix!\n\nName: ${name}\nContact Number: ${phone}\nEmail: ${email}\nProject Details:\n${project}`;
 
             const whatsappURL = `https://wa.me/917020447482?text=${message}`;
             window.open(whatsappURL, '_blank');
 
-            // Optional: reset form
-            this.reset();
-            alert('Thank you! Your message is opening in WhatsApp.');
+            // Show success message and hide form
+            document.getElementById('contactFormContainer').style.display = 'none';
+            document.getElementById('successMessage').style.display = 'block';
         });
     </script>
 </body>
